# Cpp-hydrogen-eigenvalue-solver

./: CMakeLists.txt  LICENSE  README.md  functions.cpp  functions.hpp  hydrogen.cpp
